test/spec/simd/simd_i8x16_arith2.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_i8x16_arith2.wast
;;; ARGS*: --enable-simd
(;; STDOUT ;;;
out/test/spec/simd/simd_i8x16_arith2.wast:296: assert_malformed passed:
  out/test/spec/simd/simd_i8x16_arith2/simd_i8x16_arith2.1.wat:1:33: error: unexpected token "i32x4.avgr_u", expected an instr.
  (memory 1) (func (result v128) (i32x4.avgr_u (v128.const i8x16 0 0 0 0 0 0 0 ...
                                  ^^^^^^^^^^^^
out/test/spec/simd/simd_i8x16_arith2.wast:297: assert_malformed passed:
  out/test/spec/simd/simd_i8x16_arith2/simd_i8x16_arith2.2.wat:1:33: error: unexpected token "f32x4.avgr_u", expected an instr.
  (memory 1) (func (result v128) (f32x4.avgr_u (v128.const i8x16 0 0 0 0 0 0 0 ...
                                  ^^^^^^^^^^^^
out/test/spec/simd/simd_i8x16_arith2.wast:298: assert_malformed passed:
  out/test/spec/simd/simd_i8x16_arith2/simd_i8x16_arith2.3.wat:1:33: error: unexpected token "i64x2.avgr_u", expected an instr.
  (memory 1) (func (result v128) (i64x2.avgr_u (v128.const i8x16 0 0 0 0 0 0 0 ...
                                  ^^^^^^^^^^^^
out/test/spec/simd/simd_i8x16_arith2.wast:299: assert_malformed passed:
  out/test/spec/simd/simd_i8x16_arith2/simd_i8x16_arith2.4.wat:1:33: error: unexpected token "f64x2.avgr_u", expected an instr.
  (memory 1) (func (result v128) (f64x2.avgr_u (v128.const i8x16 0 0 0 0 0 0 0 ...
                                  ^^^^^^^^^^^^
out/test/spec/simd/simd_i8x16_arith2.wast:300: assert_malformed passed:
  out/test/spec/simd/simd_i8x16_arith2/simd_i8x16_arith2.5.wat:1:33: error: unexpected token "i8x16.avgr", expected an instr.
  (memory 1) (func (result v128) (i8x16.avgr (v128.const i8x16 0 0 0 0 0 0 0 0 ...
                                  ^^^^^^^^^^
out/test/spec/simd/simd_i8x16_arith2.wast:301: assert_malformed passed:
  out/test/spec/simd/simd_i8x16_arith2/simd_i8x16_arith2.6.wat:1:33: error: unexpected token "i8x16.avgr_s", expected an instr.
  (memory 1) (func (result v128) (i8x16.avgr_s (v128.const i8x16 0 0 0 0 0 0 0 ...
                                  ^^^^^^^^^^^^
out/test/spec/simd/simd_i8x16_arith2.wast:304: assert_invalid passed:
  error: type mismatch in i8x16.min_s, expected [v128, v128] but got [i32, f32]
  0000021: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:305: assert_invalid passed:
  error: type mismatch in i8x16.min_u, expected [v128, v128] but got [i32, f32]
  0000021: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:306: assert_invalid passed:
  error: type mismatch in i8x16.max_s, expected [v128, v128] but got [i32, f32]
  0000021: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:307: assert_invalid passed:
  error: type mismatch in i8x16.max_u, expected [v128, v128] but got [i32, f32]
  0000021: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:308: assert_invalid passed:
  error: type mismatch in i8x16.avgr_u, expected [v128, v128] but got [i32, f32]
  0000022: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:313: assert_invalid passed:
  error: type mismatch in i8x16.min_s, expected [v128, v128] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:321: assert_invalid passed:
  error: type mismatch in i8x16.min_s, expected [v128, v128] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:329: assert_invalid passed:
  error: type mismatch in i8x16.min_u, expected [v128, v128] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:337: assert_invalid passed:
  error: type mismatch in i8x16.min_u, expected [v128, v128] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:345: assert_invalid passed:
  error: type mismatch in i8x16.max_s, expected [v128, v128] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:353: assert_invalid passed:
  error: type mismatch in i8x16.max_s, expected [v128, v128] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:361: assert_invalid passed:
  error: type mismatch in i8x16.max_u, expected [v128, v128] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:369: assert_invalid passed:
  error: type mismatch in i8x16.max_u, expected [v128, v128] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:377: assert_invalid passed:
  error: type mismatch in i8x16.avgr_u, expected [v128, v128] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_i8x16_arith2.wast:385: assert_invalid passed:
  error: type mismatch in i8x16.avgr_u, expected [v128, v128] but got []
  000001b: error: OnBinaryExpr callback failed
141/141 tests passed.
;;; STDOUT ;;)
